--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "vanta": "^0.5.21",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -38,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "lato-font": "^3.0.0"
   }
 }
